--- a/3XGBoost.ipynb
+++ b/3XGBoost.ipynb
@@ -630,53 +630,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 結果\n",
-    "- チケットの値段\n",
-    "- 年齢\n",
-    "- 性別\n",
-    "\n",
-    "# おまけ：ランダムフォレスト"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.88268156424581"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# http://d.hatena.ne.jp/shakezo/20121221/1356089207\n",
-    "#木の本数かね\n",
-    "# n_jobs=2 -> CPU コアを2つ使用して並列処理\n",
-    "# n_estimators=10 -> 10個の決定木からランダムフォレストをトレーニング\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "forest = RandomForestClassifier(n_estimators=1000,random_state=1, n_jobs=4)\n",
-    "\n",
-    "\n",
-    "forest.fit(train_x, train_y)\n",
-    "\n",
-    "\n",
-    "# 識別率を確認\n",
-    "predicted = forest.predict(valid_x)\n",
-    "sum(predicted == valid_y) / len(valid_y)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -700,60 +655,72 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
+       "      <th>0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>413</th>\n",
-       "      <td>1305</td>\n",
-       "      <td>0</td>\n",
+       "      <th>10</th>\n",
+       "      <td>0.029734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>414</th>\n",
-       "      <td>1306</td>\n",
-       "      <td>1</td>\n",
+       "      <th>8</th>\n",
+       "      <td>0.031299</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>1307</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0.046948</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>416</th>\n",
-       "      <td>1308</td>\n",
-       "      <td>0</td>\n",
+       "      <th>7</th>\n",
+       "      <td>0.051643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>417</th>\n",
-       "      <td>1309</td>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0.065728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.319249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.410016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     PassengerId  Survived\n",
-       "413         1305         0\n",
-       "414         1306         1\n",
-       "415         1307         0\n",
-       "416         1308         0\n",
-       "417         1309         1"
+       "           0\n",
+       "10  0.029734\n",
+       "8   0.031299\n",
+       "2   0.046948\n",
+       "7   0.051643\n",
+       "0   0.065728\n",
+       "1   0.319249\n",
+       "4   0.410016"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predicted = forest.predict(test_df6.values)\n",
-    "submission =pd.read_csv(\"id.csv\", header=0)\n",
-    "submission[\"Survived\"] = predicted\n",
-    "submission.to_csv(\"submission_rf.csv\",index=False)\n",
-    "submission.tail()"
+    "importances = pd.Series(clf_class.feature_importances_)\n",
+    "importances = importances.sort_values()\n",
+    "pd.DataFrame(importances).tail(7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 結果\n",
+    "- チケットの値段\n",
+    "- 年齢\n",
+    "- 性別"
    ]
   }
  ],
